input rounding on iOS fixed

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -38,12 +38,18 @@ p {
   margin: 0;
 }
 
+input {
+  -webkit-appearance: none;
+  border-radius: 0;
+}
+
 ///
 a {
   align-items: center;
   text-decoration: none;
   color: #0070ad;
 }
+
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -159,16 +165,19 @@ hr {
   margin-top: 24px;
   margin-bottom: 24px;
 }
+
 small {
   font-size: 12px;
   line-height: 1;
   color: #666666;
 }
+
 .label,
 .value {
   padding-top: 8px;
   padding-bottom: 8px;
 }
+
 .button {
   background-color: transparent;
   border-radius: 20px;
@@ -184,13 +193,15 @@ small {
   height: 36px;
   font-weight: bold;
   cursor: pointer;
+
   &.button--big {
     padding: 0 20px;
     border-radius: 28px;
     line-height: 48px;
     height: 52px;
   }
-  &.button--inverted{
+
+  &.button--inverted {
     color: $cg-white;
     background-color: $cg-vibrant-blue;
     border-color: $cg-vibrant-blue;
